--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
     "build:watch": "tsc -w -p .",
-    "dev": "tsc && tsc -w -p . & nodemon dist/app.js & node ngrok.cjs startNgrok"
+    "dev": "tsc -w -p . & nodemon dist/app.js & node ngrok.cjs startNgrok"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@athena-ai/sdk": "^0.0.1",
+    "@athena-ai/sdk": "^0.1.1",
     "@prisma/client": "5.15.1",
     "@slack/bolt": "^3.18.0",
     "@slack/web-api": "^6.11.2",
