fix: markdown chores: Update ngrok hostname and Slack client credentials in app

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
+SLACK_CLIENT_ID=
+SLACK_CLIENT_SECRET=
+SLACK_STATE_SECRET=
+
 NGROK_AUTH_TOKEN=
+NGROK_HOSTNAME="humorous-thankful-woodcock.ngrok-free.app"
+
 
 NODE_ENV="development"
 
 DATABASE_URL=
 
-SLACK_CLIENT_ID=
-SLACK_CLIENT_SECRET=
-SLACK_STATE_SECRET=
