--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/app.js",
-    "build": "pnpm i --frozen-lockfile && npx prisma generate && tsc",
+    "build": "npx prisma generate && tsc",
     "dev": "tsc -w -p . & nodemon dist/app.js & node ngrok.cjs startNgrok"
   },
   "keywords": [],
